--- a/package.json
+++ b/package.json
@@ -10,17 +10,26 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@lexical/react": "^0.29.0",
+    "@lexical/selection": "^0.29.0",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lexical": "^0.29.0",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-query": "^3.39.3",
