--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@lexical/code": "^0.29.0",
+    "@lexical/link": "^0.29.0",
+    "@lexical/list": "^0.29.0",
     "@lexical/react": "^0.29.0",
     "@lexical/selection": "^0.29.0",
+    "@lexical/table": "^0.29.0",
+    "@lexical/utils": "^0.29.0",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -21,6 +26,8 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toggle": "^1.1.2",
+    "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
