--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.2",
     "lexical": "^0.29.0",
